<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="search">Поиск</string>
    <string name="media_library">Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="dark_theme">Темная тема</string>
    <string name="share_the_app">Поделиться приложением</string>
    <string name="user_agreement">Пользовательское соглашение </string>
    <string name="support">Написать в поддержку</string>
    <string name="search_text">Поиск</string>
    <string name="link_the_app">https://practicum.yandex.ru/profile/android-developer/</string>
    <string name="support_email">luchik.sakuras@yandex.ru</string>
    <string name="support_title">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="support_message">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="link_arrow_forward">https://yandex.ru/legal/practicum_offer/</string>
    <string name="update">Обновить</string>
    <string name="nothing_was_found">Ничего не нашлось</string>
    <string name="no_internet">Проблемы со связью\n\nЗагрузка не удалась. Проверьте\nподключение к интернету</string>
    <string name="you_searched">Вы искали</string>
    <string name="clear_history">Очистить историю</string>
    <string name="back">Назад</string>
    <string name="add_to_playlist">Добавить в плейлист</string>
    <string name="play">Воспроизвести</string>
    <string name="add_to_favorites">Добавить в избранное</string>
    <string name="Duration">Длительность</string>
    <string name="Album">Альбом</string>
    <string name="Year">Год</string>
    <string name="Genre">Жанр</string>
    <string name="Сountry">Страна</string>
    <string name="pause">пауза</string>
    <string name="time_00_00">00:00</string>
    <string name="favorite_tracks">Избранные треки</string>
    <string name="playlists">Плейлисты</string>
    <string name="your_media_library_is_empty">Ваша медиатека пуста</string>
    <string name="new_playlist">Новый плейлист</string>
    <string name="you_havent_created_any_playlists">Вы не создали\nни одного плейлиста</string>

</resources>