<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/main_background_color"
    android:orientation="vertical"
    >

        <TextView
            style ="@style/MessageTextStyle"
            android:paddingTop="@dimen/dp_10"
            android:padding="@dimen/dp_12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_22"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/dp_16"
        >


        <Button
            style ="@style/mainButtonsStyle"
            android:id="@+id/button_search"
            android:layout_marginTop="@dimen/dp_8"
            android:text="@string/search"
            app:icon= "@drawable/light_mode"
            />


        <Button
            style ="@style/mainButtonsStyle"
            android:id="@+id/button_media_library"
            android:text="@string/media_library"
            app:icon="@drawable/music"/>

        <Button
            style ="@style/mainButtonsStyle"
            android:id="@+id/button_settings"
            android:text="@string/settings"
            app:icon= "@drawable/setting"
            android:layout_marginBottom="@dimen/dp_12"/>
    </LinearLayout>
</LinearLayout>