<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="?attr/setting_background_color">

    <LinearLayout
        android:id="@+id/buttonBack"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start|center_vertical"
        android:orientation="horizontal"
        tools:ignore="UseCompoundDrawables,UselessParent">

        <ImageView
            style="@style/backButtonIconsStyle"
            tools:ignore="Suspicious0dp"/>

        <TextView
            style="@style/MessageTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/eight_dp"
            android:text="@string/settings"
            android:textAllCaps="false"
            android:textFontWeight = "500"
            android:textSize="@dimen/twenty_two_sp"
            tools:ignore="ExtraText" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/buttonDarkTheme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        tools:ignore="ExtraText">

        <TextView
            style="@style/settingsButtonTextStyle"
            android:text="@string/dark_theme" />

        <ImageView
            style="@style/settingsButtonIconsStyle"
            android:layout_width="@dimen/thirty_five_dp"
            android:layout_height="@dimen/eighteen_dp"
            android:layout_marginEnd="@dimen/twenty_two_dp"
            android:src="?attr/switch_icon"
            app:tint = "?attr/icon_switch_color"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/buttonShareTheApp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        tools:ignore="ExtraText">

        <TextView
            style="@style/settingsButtonTextStyle"
            android:text="@string/share_the_app" />

        <ImageView
            style="@style/settingsButtonIconsStyle"
            android:src="@drawable/share"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/buttonSupport"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        tools:ignore="ExtraText">

        <TextView
            style="@style/settingsButtonTextStyle"
            android:text="@string/support" />

        <ImageView
            style="@style/settingsButtonIconsStyle"
            android:src="@drawable/support"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/buttonArrowForward"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        tools:ignore="ExtraText">

        <TextView
            style="@style/settingsButtonTextStyle"
            android:text="@string/user_agreement" />

        <ImageView
            style="@style/settingsButtonIconsStyle"
            android:src="@drawable/arrow_forward"/>
    </LinearLayout>

</LinearLayout>
