<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/white_to_black"
    android:orientation="vertical"
    tools:context="com.example.playlistmaker.ui.search.fragment.SearchFragment">

    <TextView
        android:id="@+id/search_header"
        style="@style/title_text_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_14"
        android:layout_marginStart="@dimen/dp_16"
        android:text="@string/search_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RelativeLayout
        android:id="@+id/relative_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_20"
        android:background="@drawable/round_corner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/search_header">

        <EditText
            android:id="@+id/input_edit_text"
            style="@style/searchEditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_36"
            android:drawableStart="@drawable/search_icon"
            android:drawablePadding="@dimen/dp_8"
            android:hint="@string/search"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:lines="1"
            android:paddingStart="@dimen/dp_12"
            android:paddingEnd="@dimen/dp_40"
            android:singleLine="true"
            app:tint="?attr/grey_to_black"
            tools:ignore="RtlSymmetry" />

        <ImageView
            android:id="@+id/button_clear"
            android:layout_width="@dimen/dp_24"
            android:layout_height="@dimen/dp_24"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/dp_6"
            android:src="@drawable/close"
            android:visibility="gone"
            app:tint="?attr/grey_to_black"
            tools:visibility="visible" />

    </RelativeLayout>

    <TextView
        android:id="@+id/title_for_story_text_view"
        style="@style/searchTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_50"
        android:text="@string/you_searched"
        android:textFontWeight="500"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/relative_edit_text"
        tools:visibility="visible" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_20"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_for_story_text_view" />

    <Button
        android:id="@+id/clear_history_button"
        style="@style/searchButtonsStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/dp_24"
        android:text="@string/clear_history"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/recycler_view"
        tools:visibility="visible" />

    <ProgressBar android:id="@+id/progressBar"
        android:layout_width="44dp"
        android:layout_height="44dp"
        android:indeterminateTint="@color/blue"
        android:visibility="gone"
        android:layout_marginTop="148dp"
        app:layout_constraintTop_toBottomOf="@id/relative_edit_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:visibility="visible"/>

    <ImageView
        android:id="@+id/placeholder_no_internet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="?attr/placeholder_no_internet"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/text_no_internet"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/text_no_internet"
        style="@style/searchTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/dp_16"
        android:text="@string/no_internet"
        android:textAlignment="center"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/update_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/placeholder_no_internet"
        tools:visibility="visible" />

    <Button
        android:id="@+id/update_button"
        style="@style/searchButtonsStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/dp_24"
        android:text="@string/update"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_no_internet"
        tools:visibility="visible" />


    <ImageView
        android:id="@+id/placeholder_nothing_was_found"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="?attr/placeholder_smile"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/text_nothing_was_found"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/text_nothing_was_found"
        style="@style/searchTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/nothing_was_found"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/placeholder_nothing_was_found"
        tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>